syntax = "proto2";
package k8s.io.kubectl.cmd;

import "google/protobuf/descriptor.proto";

message FlagDetail {
  required string name = 1;
  repeated string value = 2;
  required string shorthand = 3;
  required string usage = 4;
  enum EXT {
      NONE = 0;
      ISTIME = 1;
      ISSTRARRAY = 2;
      ISSTRSLICE = 3;
  }
  optional EXT ext = 5;
}

extend google.protobuf.FieldOptions {
  optional FlagDetail info = 1234;
}

message CommandInfo {
  optional string use = 1;
  optional string description_short = 2;
  optional string description_long = 3;
  optional string example = 4;
}

extend google.protobuf.MessageOptions {
    optional CommandInfo cmd = 5678;
}

message Array {
    repeated string array = 1;
}


//This is the flag description only for test
message TestCmd {
    option (cmd) = {
        use: "test"
        description_short: "Print the client and server version information"
        description_long: "Print the client and server version information for the current context"
        example: "# Print the client and server versions for the current context kubectl version"
    };
    optional bool BoolFlag = 1 [(info) = { name: "bool-flag" value: "false" shorthand: "c" usage: "test"} ];
    optional string StringFlag = 2 [ (info) = { name: "string-flag" value: "" shorthand: "o" usage: "test"}];
    optional int32 Int32Flag = 3 [ (info) = { name: "int-flag" value: "0" shorthand: "" usage: "test"}];
    optional Array ArrayFlag = 4 [ (info) = { name: "repeated-string-flag" value: "default1" value: "default2" shorthand: "" usage: "test" ext: ISSTRARRAY}];
    optional int64 Int64Flag = 5 [ (info) = { name: "long-flag" value: "1234" shorthand: "" usage: "test"}];
    optional int64 TimeFlag = 6 [ (info) = { name: "time-flag" value: "1234565666" shorthand: "" usage: "test" ext: ISTIME}];
}